hero text overflow fix

--- a/src/components/styles/Hero.css
+++ b/src/components/styles/Hero.css
@@ -20,7 +20,7 @@
     justify-content: space-between;
     /* Filters the strength of the stars*/
     background-color:#06090fbb;
-    height: 75vh;
+    min-height: 75vh;
     overflow: hidden;
     padding-top: 100px;
     padding-bottom: 50px;
